--- a/seven.html
+++ b/seven.html
@@ -99,7 +99,7 @@
                     <img src="assets/menu_image.webp">
                 </div>
                 <div class="content-item page-header centered">
-                    <br> but this doesn't seem to be what you are looking for... <br> try scanning another!
+                    <br> was this what you expected...? <br> try scanning another!
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                     <img src="assets/danikh's_paynow.jpg">
                 </div>
                 <div class="content-item page-header centered">
-                    <br> but this doesn't seem to be what you are looking for... <br> try scanning another! <br><br>(it's real, please don't actually send money)
+                    <br> was this what you expected...? <br> try scanning another! <br><br>(it's real, please don't actually send money)
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                     <img src="assets/survey_img.jpg">
                 </div>
                 <div class="content-item page-header centered">
-                    <br> but this doesn't seem to be what you are looking for... <br> try scanning another! <br><br> (it's fake, but please chat with us!)
+                    <br> was this what you expected...? <br> try scanning another! <br><br> (it's fake, but please chat with us!)
                 </div>
             </div>
         </div>
