--- a/three.html
+++ b/three.html
@@ -63,7 +63,7 @@
                 <div id="task-page-logo-container">
                     <img src="assets/square_logo.svg">
                     <div class="content-item page-title">
-                    white space
+                    quiet space
                     </div>
                 </div>
                 <div class="content-item page-header centered">
